--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-project-example/master-components": [
+        "libs/master-components/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
